--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -4,6 +4,10 @@
   box-sizing: border-box;
 }
 
+html{
+  overflow-x: hidden;
+}
+
 body{
   font: 1rem 'Helvetica Neue', Arial, sans-serif;
   color: #121214;
