--- a/src/Components/Header/styles.scss
+++ b/src/Components/Header/styles.scss
@@ -7,19 +7,29 @@ header.header {
   align-items: center;
   flex-wrap: wrap;
 
+  .title{
+    width: 100%;
+    display: flex;
+    align-items: center;
+    margin-bottom: 3rem;
+
+    svg{
+      width: 5rem;
+      height: 5rem;
+      margin-right: 2rem;
+    }
+  }
+
   h1 {
     color: #fff;
     font-size: 3rem;
-    margin: 0rem 0 4rem;
     text-align: left;
-    width: 100%;
-
     font-family: 'Roboto';
   }
 
   .change-user {
     position: relative;
-    width: calc(50% - 1rem);
+    width: 100%;
     display: flex;
     flex-wrap: wrap;
 
@@ -31,11 +41,11 @@ header.header {
     }
 
     input[type="text"]{
-      width: 70%!important;
+      width: 80%!important;
     }
 
     button{
-      width: calc(30% - 1rem);
+      width: calc(20% - 1rem);
       height: 3rem;
       margin-left: 1rem;
 
