Ajuste de padding no body

--- a/src/Components/RepositoryList/styles.scss
+++ b/src/Components/RepositoryList/styles.scss
@@ -1,7 +1,7 @@
 section.repository-list{
   max-width: 1080px;
   margin: 0 auto;
-  padding: 0 1rem;
+  padding: 0 1rem 1rem;
 
   h2{
     margin-bottom: 1rem;
